--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/express": "^4.17.20",
     "@types/node": "^20.19.23",
     "@types/node-cron": "^3.0.11",
-    "@types/react": "^18",
+    "@types/react": "18.3.26",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
@@ -39,6 +39,6 @@
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
