--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "next": "^14.2.33",
     "node-cron": "^3.0.2",
+    "playwright": "^1.57.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.9.0",
